syntax = "proto3";

package audit;

import "google/protobuf/timestamp.proto";

option go_package = "../pkg/audit";

message LogRequest {
  enum Actions {
    SIGN_UP = 0;
    SIGN_IN = 1;
    REFRESH = 2;
    GET = 3;
    CREATE = 4;
    UPDATE = 5;
    DELETE = 6;
  }
  enum Entities {
    USER = 0;
    SYMBOL = 1;
  }

  Actions action = 1;
  Entities entity = 2;
  string entity_id = 3;
  google.protobuf.Timestamp timestamp = 4;
  string request_id = 5;
}

message Response {
  enum Answer {
    SUCCESS = 0;
    ERROR = 1;
  }
  Answer answer = 1;
}

service AuditService {
  rpc Log(LogRequest) returns (Response) {}
}
